# openai-python

./: .gitignore  README.md  main.py  pyproject.toml
examples/: chat_completion.ipynb  chat_completion.py  create_speech.py  describe_photo.py  transcription.py
